[project]
name = "ufanet-main"
version = "0.1.0"
description = ""
authors = [
    {name = "LittleSweetEvil",email = "40055618+LittleSweetLoli@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "paho-mqtt (>=2.1.0,<3.0.0)",
    "aiogram (>=3.22.0,<4.0.0)",
    "aiomqtt (>=2.4.0,<3.0.0)",
    "redis (>=7.1.0,<8.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
